--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,87 +23,70 @@
       </div>
     </div>
   </div>
-  <div class="row user-stuff-section">
-      <div class="mystuff-tab-container">
-        <div class="pull-left left-aside col-md-2 col-sm-12 col-xs-12 mystuff-tab-menu">
-          <%= render partial: 'users/side_tab_menu'%>
-        </div>
-        <div class="content-wrapper col-md-6 col-sm-12 col-xs-12 mystuff-tab">
-          <div class="mystuff-tab-content active">
-            <p>About</p>
-
-            <hr>
-            <%= render partial: 'users/about', locals: {user: @user}%>
-          </div>
-
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="exampleModalLabel">New message</h4>
+  <div class="row">
+    <div class="col-md-8 user-profile-info">
+      <div role="tabpanel">
+      <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active"><a href="#education" aria-controls="education" role="tab" data-toggle="tab">Education</a></li>
+          <li role="presentation"><a href="#professional" aria-controls="profile" role="tab" data-toggle="tab">Professional</a></li>
+        </ul>
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane active" id="education">
+            <div class="row current-course item">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <div class="row">
+                    <div class="col-md-6 col-sm-9 col-xs-12">
+                      <h5>Current courses</h5>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 pull-right">
+                      <a class="add-current-course btn btn-success icon-plus-sign">Add a course</a>
+                    </div>
+                  </div>
                 </div>
-                <div class="modal-body">
-                  <%= bootstrap_form_for(@user_post) do |f| %>
-                    <% if @user_post.errors.any? %>
-                      <div id="error_explanation">
-                        <h2><%= pluralize(@user_post.errors.count, "error") %> prohibited this user_post from being saved:</h2>
-
-                        <ul>
-                        <% @user_post.errors.full_messages.each do |message| %>
-                          <li><%= message %></li>
-                        <% end %>
-                        </ul>
-                      </div>
-                    <% end %>
-                    <%= f.text_area :description, required: true%>
-
+                <div class="panel-body">
+                  <ul class="course-list col-md-8" id="current-courses-list-<%=@user.id%>">
+                    <% @user.current_courses.each do |course|%>
+                      <li id="course-id-<%=course.id%>" class="current" data-course-id="<%= course.id %>"><%= course.name %> at
+                        <span><%= course.organization %></span>
+                        <span class="actions" id="course-actions-<%= course.id %>">
+                          <%=link_to([@user, course], remote: true, method: :delete, data: { comfirm: "are you sure you want to delete this course"}) do %>
+                            <i class="fa fa-times"></i>
+                          <%end%>
+                        </span>
+                      </li>
+                    <%end%>
+                  </ul>
+                  <div id="current-course" class="col-md-4">
+                    <div class="new-current-course-form" id="current-course-form-<%=@user.id%>" style="display:block;" data-user-id="<%= @user.id %>">
+                      <%= bootstrap_form_for([@user, CurrentCourse.new], remote: true) do |f| %>
+                      <%= f.text_field :name, required: true %>
+                      <%= f.text_field :organization, required: true%>
+                      <%= f.submit "Save" %>
+                      <% end %>
+                    </div>
+                  </div>
                 </div>
-                <div class="modal-footer">
-                  <span type="button" class="btn btn-default" data-dismiss="modal">Close</span>
-                  <span class="actions">
-                      <%= f.submit %>
-                  </span>
-                </div>
-                <% end %>
               </div>
             </div>
-          </div>
 
-          <div class="mystuff-tab-content">
-            <p>Courses</p>
-            <hr>
-          </div>
-          <!-- train section -->
-          <div class="mystuff-tab-content">
-            <p>Teams</p>
-            <hr>
-          </div>
-          <!-- hotel search -->
-          <div class="mystuff-tab-content">
-            <p>Organizations</p>
-            <hr>
-          </div>
-          <div class="mystuff-tab-content">
-            <p>Favorites</p>
-          </div>
-          <div class="mystuff-tab-content">
-            <p>Posts <span class="pull-right">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">New Post</button>
-             </span></p>
-            <hr>
+          </div><!-- tab panel ends here-->
+          <div role="tabpanel" class="tab-pane active" id="professional">
 
           </div>
-
         </div>
-        <aside class="right-aside col-md-4 col-sm-12 col-xs-12">
-          <div class="suggestions">
-            <p>Suggestions</p>
-            <hr>
-          </div>
-        </aside>
       </div>
-
+    </div>
+    <div class="col-md-3 col-sm-12 col-xs-12 text-center">
+      <div class="user-suggestions">
+        <p>Suggestions</p>
+        <pre>fjsklfjls
+        ijsjfklsjdf
+        lsifjlsj
+        dfijslfkj</pre>
+      </div>
     </div>
   </div>
 </div>
