Add functionality for users to add taken course and be able to delete it

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -303,6 +303,17 @@ aside h3 {
   margin-left:30px;
 }
 
+.course-item {
+
+  .remove-item {
+    display: none;
+  }
+
+  &:hover {
+    .remove-item{ display:inline;}
+  }
+}
+
 
 
 
