--- a/app/views/current_courses/_current_course.html.erb
+++ b/app/views/current_courses/_current_course.html.erb
@@ -1,8 +1,10 @@
-<li id="course-id-<%=course.id%>" class="current" data-course-id="<%= course.id %>"><%= course.name %> at
+<li id="course-id-<%=course.id%>" class="current course-item" data-course-id="<%= course.id %>"><%= course.name %> at
   <span><%= course.organization %></span>
   <span class="actions" id="course-actions-<%= course.id %>">
-    <%=link_to([@user, course], remote: true, method: :delete) do %>
-      <i class="fa fa-times"></i>
+    <%if current_user == course.user %>
+      <%=link_to([current_user, course], remote: true, method: :delete, data: { comfirm: "are you sure you want to delete this course"}, class: "") do %>
+        <span title="remove course"class="fa fa-times remove-item tex-center"></span>
+      <%end%>
     <%end%>
   </span>
 </li>
