--- a/app/views/follows/_follow_form.html.erb
+++ b/app/views/follows/_follow_form.html.erb
@@ -1,4 +1,5 @@
 <div>
+<%if current_user%>
   <% if current_user.following?(user)%>
     <div class="following-partial">
     <%= bootstrap_form_for(current_user.follows.find_by(followable_id: user.id), html: {method: :delete}, remote: true ) do |f| %>
@@ -14,4 +15,5 @@
     </div>
   <%end%>
 </div>
+<%end%>
 
