add ability to create futres courses

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,6 +36,7 @@
           <div role="tabpanel" class="tab-pane active" id="education">
             <%=render partial: "current_courses/view"%>
             <%=render partial: "taken_courses/view"%>
+            <%=render partial: "future_courses/view"%>
           </div><!-- tab panel ends here-->
           <div role="tabpanel" class="tab-pane active" id="professional">
 
