ability to add education information

--- a/app/views/future_courses/create.js.erb
+++ b/app/views/future_courses/create.js.erb
@@ -1,4 +1,4 @@
-var target = $("ul#future_courses-list-<%= @future_course.user.id%>")
+var target = $("ul#future-courses-list-<%=@future_course.user.id%>")
 target.prepend("<%= j(render partial: 'future_courses/future_course',
   locals: {
     course: @future_course
