--- a/app/views/future_courses/destroy.js.erb
+++ b/app/views/future_courses/destroy.js.erb
@@ -1,2 +1,2 @@
-var target = $("ul#future-courses-list-<%=@future_course.user.id%> #taken-course-id-<%= @taken_course.id %>")
+var target = $("ul#future-courses-list-<%=@future_course.user.id%> #future-course-id-<%= @future_course.id %>")
 target.remove();
