--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,8 @@
       </div>
     </div>
   </div>
+</div>
+<div class="container">
   <div class="row">
     <div class="col-md-8 user-profile-info">
       <div role="tabpanel">
@@ -37,6 +39,7 @@
             <%=render partial: "current_courses/view"%>
             <%=render partial: "taken_courses/view"%>
             <%=render partial: "future_courses/view"%>
+            <%=render partial: "educations/view"%>
           </div><!-- tab panel ends here-->
           <div role="tabpanel" class="tab-pane active" id="professional">
 
@@ -47,8 +50,8 @@
     <div class="col-md-3 col-sm-12 col-xs-12 text-center">
       <div class="user-suggestions">
         <p>Suggestions</p>
-
       </div>
     </div>
   </div>
 </div>
+
