--- a/app/assets/stylesheets/study_meetups.css.scss
+++ b/app/assets/stylesheets/study_meetups.css.scss
@@ -55,23 +55,103 @@
 }
 
 .study-meetup-header {
-  height:270px;
-  background: #aaaaaa;
+  min-height:270px;
   background-position: cover;
-  position: relative;
-  h1{
+  padding:0px;
+  margin-top: 20px;
 
+  h1{
     font-family: Raleway, sans-serif;
-  letter-spacing: -1px;
-  line-height: 46px;
-  font-size: 50px;
-  font-weight: 400px;
-  color: #fff;
-  margin-top: 0px;
-  padding: 20p
+    letter-spacing: -1px;
+    line-height: 46px;
+    font-size: 50px;
+    font-weight: 400px;
+    color: #fff;
+    margin-top: 0px;
+    padding-top: 20px;
+  }
+
+  .meetup-banner-wrapper {
+     position:relative;
+     min-height:270px;
 
   }
+
+  .meetup-banner {
+    background:green;
+    min-height: 210px;
+    margin-top:-20px;
+
+
+    .meetup-actions {
+      background-color: #dddddd;
+      position:absolute;
+      bottom:0;
+      left:0;
+      width:100%;
+      min-height:60px;
+      padding-left:-15px;
+
+      .col-sm-6 { padding-left:-20px;}
+    }
+
+  }
+  .meetup-stats {
+    background-color: #393d41;
+    color:#fff;
+    min-height:280px;
+
+    h3 {
+      padding-top:40px;
+      padding-left:50px;
+      text-align:left;
+    }
+  }
+
+  .meetup-actions {
+    margin-left:0px;
+    padding-left:20px;
+    background: #DDE8E8;
+  }
+  .meetup-headline {
+    margin-left:20px;
+    margin-top:20px;
+    text-align:center;
+  }
 }
+
+.meetup-content {
+  margin-top:5px;
+  .content-section {
+    //border:1px solid black;
+    padding:20px;
+    background-color: #fff;
+    min-height: 300px;
+    border-radius:5px;
+
+  }
+  .sider-bar, .col-md-4 {
+    //border:1px solid black;
+    padding-left:0px;
+  }
+
+  .side-bar {
+    text-align: center;
+    padding-left:0px;
+    border-right:1px solid #dddddd;
+
+    .side-bar-content {
+      margin-right:5px;
+      text-align: center;
+      background-color: #fff;
+      border-radius:5px;
+      padding-top:10px;
+      min-height:400px;
+    }
+  }
+}
+
+
 
 
 
