--- a/app/views/study_meetups/show.html.erb
+++ b/app/views/study_meetups/show.html.erb
@@ -1,36 +1,51 @@
-<div class="container-fluid">
+<div class="container">
   <div class="study-meetup-header row">
-    <h1 class="text-center"><%= @study_meetup.name %></h1>
+  <div class="col-md-4 col-sm-6 col-xs-12 meetup-stats" style="">
+      <h3 class="text-left">45 members</h3>
+      <h3 class="text-left">28 recommendations</h3>
+      <h3 class="text-left">432 posts</h3>
+    </div>
+    <div class="meetup-banner-wrapper col-md-8 col-sm-12 col-xs-12 text-center">
+      <div class=" meetup-banner">
+        <h1 class="meetup-headline"><%= @study_meetup.name %></h1>
+        <a href="" class="btn btn-default">Join</a>
+      </div>
+      <div class="meetup-actions">
+          <%= render partial: 'users/user_profile_footer', locals: { user: current_user } %>
+      </div>
+    </div>
+
+  </div>
+</div>
+<div class="container">
+  <div class="row meetup-content">
+    <div class="col-md-4 side-bar text-center">
+      <div class="side-bar-content">
+        <p>Meet other users</p>
+        <div role="tabpanel">
+        <!-- Nav tabs -->
+          <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Posts</a></li>
+            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Users</a></li>
+            <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">topics</a></li>
+            <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <div role="tabpanel" class="tab-pane active" id="home">posts</div>
+            <div role="tabpanel" class="tab-pane" id="profile">users</div>
+            <div role="tabpanel" class="tab-pane" id="messages">favorites</div>
+            <div role="tabpanel" class="tab-pane" id="settings">settings</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <span></span>
+    <span id="explore" style="display:none;" >adsfdsfs</span>
+    <div class="col-md-8 content-section">
+      <h4>content</h4>
+
+    </div>
   </div>
 </div>
 
-<div class="container">
-
-</div>
-
-
-
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @study_meetup.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @study_meetup.description %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @study_meetup.user_id %>
-</p>
-
-<p>
-  <strong>Goal:</strong>
-  <%= @study_meetup.goal %>
-</p>
-
-<%= link_to 'Edit', edit_study_meetup_path(@study_meetup) %> |
-<%= link_to 'Back', study_meetups_path %>
