--- a/app/views/users/_user_profile_footer.html.erb
+++ b/app/views/users/_user_profile_footer.html.erb
@@ -1,22 +1,22 @@
 <div class="row profile-footer">
   <div class="user-stats col-sm-6">
     <div class="col-md-3 col-sm-3 stat">
-      <%= link_to @user.followers.count, followers_user_path(@user) %>
+      <%= link_to user.followers.count, followers_user_path(user) %>
       <div>Followers</div>
     </div>
     <div class="col-md-3 col-sm-3 col-xs-12 stat">
-      <%= link_to @user.following_users.count, following_user_path(@user) %>
+      <%= link_to user.following_users.count, following_user_path(user) %>
       <div>Following</div>
     </div>
     <div class="col-md-3 col-sm-3 col-xs-12 stat">
-      <%= link_to @user.following_users.count, upvotes_user_path(@user) %>
+      <%= link_to user.following_users.count, upvotes_user_path(user) %>
       <div>Favorites</div>
     </div>
   </div>
   <div class="user-action-icons col-lg-6">
     <a class="icon circle col-md-3 col-sm-4"  href="/users/edit"><span class="glyphicon glyphicon-edit gi-3x"></span></a>
     <a class=" icon circle col-md-3 col-sm-4" href="/user_posts/new"><span class="glyphicon glyphicon-plus gi-3x"></span></a>
-    <a class=" icon circle col-md-3 col-sm-4" href="/edit"><span class="glyphicon glyphicon-chevron-down gi-3x"></span></a>
-    <a href="" class="btn btn-primary btn-lg">Follow</a>
+    <a class="icon circle col-md-3 col-sm-4" onclick="$("#explore").toggle();"><span class="glyphicon glyphicon-chevron-down gi-3x"></span></a>
+    <a href="" onclick='$("#explore").toggle();'>explore</a>
   </div>
 </div>
