--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,5 +1,5 @@
 <div class ="container">
-  <h1> <%= @user.following_users.count %> Followers</h1>
+  <h1> <%= @user.following_users.count %> Following</h1>
   <hr>
   <% @following.each do |user| %>
     <div class="row">
