* Add a ability for a user to CRUD post in the meetup group
* Add scaffold comment files for meetup_posts

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,5 +1,5 @@
 body {
-  background-color:#EBEBEB;
+  //background-color:#EBEBEB;
   font-family: Georgia,Times,"Times New Roman",serif;
   font-size: 15px;
   line-height: 1.4;
