--- a/app/views/meetups/new.html.erb
+++ b/app/views/meetups/new.html.erb
@@ -3,7 +3,7 @@
     <h2 class="panel-heading">New study meetup</h2>
       <%= render 'form' %>
       <div class="actions-links">
-        <%= link_to 'View all Meetups', study_meetups_path %>
+        <%= link_to 'View all Meetups', meetups_path %>
       </div>
   </div>
 </div>
