--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -1,11 +1,11 @@
 <div class="new-meetup-form" id="new-meetup-form-id">
-  <%= bootstrap_form_for(@study_meetup) do |f| %>
-    <% if @study_meetup.errors.any? %>
+  <%= bootstrap_form_for(@meetup) do |f| %>
+    <% if @meetup.errors.any? %>
       <div id="error_explanation">
-        <h2><%= pluralize(@study_meetup.errors.count, "error") %> prohibited this study_meetup from being saved:</h2>
+        <h2><%= pluralize(@meetup.errors.count, "error") %> prohibited this meetup from being saved:</h2>
 
         <ul>
-        <% @study_meetup.errors.full_messages.each do |message| %>
+        <% @meetup.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
         </ul>
