--- a/app/views/meetup_posts/_meetup_posts.html.erb
+++ b/app/views/meetup_posts/_meetup_posts.html.erb
@@ -20,7 +20,34 @@
         <p><%= post.description %></p>
       </div>
       <!-- Comments start here-->
+        <div class="post-comments">
+        <ul class="list-inline row">
+          <li class="col-md-3 col-sm-3 col-xs-6"><a class="add-comment" id="add-comment-<%= post.id %>" data-comment="<%= post.id %>"><i class="glyphicon glyphicon-plus-sign"></i> Comment </a></li>
+          <li class="col-md-3 col-sm-3 col-xs-6" class="glyphicon glyphicon-comment">
+          <a class="count-comments" id="count-comments-<%= post.id %>" data-comment="<%= post.id %>"><%= post.comments.count %> comments</a> </li>
 
+          <%if current_user.upvoted_post?(current_user, post)%>
+            <span id="upvote-btn-<%=post.id%>">
+              <%=link_to(user_post_upvote_path(post.id, Upvote.current(current_user, post)),remote: true, method: :delete) do %>
+                <i class="glyphicon glyphicon-thumbs-up"></i>
+              <%end%>
+            </span>
+          <%else%>
+             <span id="upvote-btn-<%=post.id%>">
+              <%=link_to(user_post_upvotes_path(post.id, Upvote.new),remote: true, method: :post) do %>
+                <i class="glyphicon glyphicon-thumbs-up"></i>
+              <%end%>
+            </span>
+          <%end%>
+          <span class="count-upvotes" id="count-upvotes-<%= post.id %>" data-comment="<%= post.id %>"><%= post.upvotes.count %> upvotes</span>
+        </ul>
+        <div class="new-comment" id="new-comment-form-<%= post.id %>" style="display:none;">
+          <%= render partial: 'meetup_posts/new_comment_form', locals: {meetup_post: post, meetup: meetup}%>
+        </div>
+        <div class="all-comments" id="all-comments-<%=post.id %>" style="display:none;">
+        <%= render partial: 'meetup_posts/comments', locals: { user: current_user, post: post}%>
+        </div>
+      </div>
       <!-- End of comments-->
       <hr>
     </div><!-- Post body ends here-->
