Add ability for a user to vote for meetup post

--- a/app/views/meetup_posts/_form.html.erb
+++ b/app/views/meetup_posts/_form.html.erb
@@ -16,7 +16,7 @@
       <%= f.text_field :title %>
     </div>
     <div class="field">
-      <%= f.text_area :description %>
+      <%= f.text_area :description, required: true %>
     </div>
 
     <div class="actions">
