--- a/app/views/meetup_posts/_meetup_posts.html.erb
+++ b/app/views/meetup_posts/_meetup_posts.html.erb
@@ -26,20 +26,20 @@
           <li class="col-md-3 col-sm-3 col-xs-6" class="glyphicon glyphicon-comment">
           <a class="count-comments" id="count-comments-<%= post.id %>" data-comment="<%= post.id %>"><%= post.comments.count %> comments</a> </li>
 
-          <%if current_user.upvoted_post?(current_user, post)%>
+          <% if MeetupPostVote.where(user_id: current_user, meetup_post_id: post).present? %>
             <span id="upvote-btn-<%=post.id%>">
-              <%=link_to(user_post_upvote_path(post.id, Upvote.current(current_user, post)),remote: true, method: :delete) do %>
+              <%=link_to(meetup_meetup_post_meetup_post_vote_path(meetup,post.id, MeetupPostVote.where(user_id: current_user, meetup_post_id: post).first),remote: true, method: :delete) do %>
                 <i class="glyphicon glyphicon-thumbs-up"></i>
               <%end%>
             </span>
           <%else%>
-             <span id="upvote-btn-<%=post.id%>">
-              <%=link_to(user_post_upvotes_path(post.id, Upvote.new),remote: true, method: :post) do %>
+            <span id="upvote-btn-<%=post.id%>">
+              <%=link_to(meetup_meetup_post_meetup_post_votes_path(meetup,post.id, MeetupPostVote.new),remote: true, method: :post) do %>
                 <i class="glyphicon glyphicon-thumbs-up"></i>
               <%end%>
             </span>
           <%end%>
-          <span class="count-upvotes" id="count-upvotes-<%= post.id %>" data-comment="<%= post.id %>"><%= post.upvotes.count %> upvotes</span>
+          <span class="count-upvotes" id="count-upvotes-<%= post.id %>" data-comment="<%= post.id %>"><%= post.meetup_post_votes.count %> upvotes</span>
         </ul>
         <div class="new-comment" id="new-comment-form-<%= post.id %>" style="display:none;">
           <%= render partial: 'meetup_posts/new_comment_form', locals: {meetup_post: post, meetup: meetup}%>
