--- a/app/views/meetups/index.html.erb
+++ b/app/views/meetups/index.html.erb
@@ -1,5 +1,4 @@
-<h1 class="text-center">Listing study meetups</h1>
-<hr>
+<h1 class="text-center"><%= Meetup.all.count%> Course user meetups</h1>
 
 <div class="container">
   <div class ="study-meetups-wrapper row">
@@ -10,20 +9,26 @@
     <div class="study-meetups-section col-md-10">
       <div class="row all-study-meetups">
       <% @meetups.each do |meetup| %>
-        <div id="meetup-card-<%=  %>" class="meetup-card col-md-3">
+        <div id="meetup-card-<%=  %>" class="meetup-card col-md-2">
           <div class="card-top">
-            <h4> <%= meetup.name %> </h4>
+            <h4 class="text-center"> <%= meetup.name %> </h4>
+            <% if meetup.provider %>
+              <p class="text-center">by <strong><%= meetup.provider%></strong></p>
+            <%end%>
           </div>
           <div class="card-bottom text-center">
             <div class="actions meetup-members">
-              <a href="/meetups/<%=meetup.id%>" class="members">
+              <a href="/meetups/<%=meetup.id%>/meetup_members" class="members">
               <%= meetup.users.count %> Members</a>
+              <span><a href="/meetups/<%= meetup.id%>/meetup_posts" class="members">
+              <%= meetup.meetup_posts.count %> posts</a></span>
             </div>
             <div class="actions">
-              <span><a href="" class="btn btn-primary"> Join</a></span>
-              <span><a href="" class="btn btn-primary"> view </a></span>
+              <span class="meetup-join" id="meetup-join-<%= meetup.id %>">
+                <%= render partial: 'meetup_members/form', locals: {meetup: meetup}%>
+              </span>
+              <span><a href="/meetups/<%= meetup.id %>" class="btn btn-primary"> view </a></span>
             </div>
-
           </div>
         </div>
       <% end %>
