--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -3,6 +3,9 @@
     <div class="meetup-banner-wrapper col-md-12 col-sm-12 col-xs-12 text-center">
       <div class="meetup-banner">
         <h1 class="meetup-headline"><%= @meetup.name %></h1>
+        <%if @meetup.provider%>
+          <p>by <strong><%= @meetup.provider %></strong></p>
+        <%end%>
         <br>
         <div class="meetup-join" id="meetup-join-<%= @meetup.id %>">
           <%= render partial: 'meetup_members/form', locals: {meetup: @meetup}%>
@@ -16,9 +19,13 @@
 </div>
 <div class="container">
   <div class="row meetup-content">
-
+  <p class="notice"><%= notice %></p>
     <span id="explore" style="display:none;" >
-    <%= render partial: 'meetup_posts/form', locals: {meetup: @meetup} %>
+      <% if @meetup.member?(current_user)%>
+        <%= render partial: 'meetup_posts/form', locals: {meetup: @meetup} %>
+      <%else%>
+        <p>Before you can post anything you need to join this meetup</p>
+      <%end%>
     </span>
     <div class="col-md-8 content-section">
       <h4>content</h4>
@@ -28,7 +35,6 @@
   <div class="col-md-4 side-bar text-center">
       <div class="side-bar-content">
         <p>Meet other users</p>
-
       </div>
     </div>
    </div>
