--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -14,7 +14,9 @@
     <%end%>
     <div class="col-md-12 pull-left">
        <div class="description row"><%= comment.description%></div>
-       <div class="row time"><%=comment.created_at.strftime("%B %d, %Y, %I:%M %p ") %></div>
+       <div class="time">
+          <%= timeago_tag comment.created_at, :nojs => true, :limit => 30.days.ago %>
+        </div>
     </div>
   </div>
   <hr>
