--- a/app/views/meetup_members/_create_form.html.erb
+++ b/app/views/meetup_members/_create_form.html.erb
@@ -1,1 +1,3 @@
-<%= link_to "JOIN", meetup_meetup_members_path(@meetup.id, MeetupMember.new), method: :post, class: 'btn btn-default' %>
+<%= link_to(meetup_meetup_members_path(meetup.id, MeetupMember.new),remote: true,  method: :post) do %>
+  <p href="" class="btn btn-default">join</p>
+<%end%>
