--- a/app/views/meetup_posts/_comments.html.erb
+++ b/app/views/meetup_posts/_comments.html.erb
@@ -7,7 +7,7 @@
           <div class="pull-left block commenter-image circle">
             <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
           </div>
-          <span><%=link_to "#{comment.user.full_name}", user_path(user), class: "row" %></span>
+          <span><%=link_to "#{comment.user.full_name}", user_path(comment.user), class: "row" %></span>
           </div>
           <% if comment.user == current_user %>
             <div class="col-md-2 col-sm-6 col-xs-12 text-center comment-actions">
@@ -17,7 +17,9 @@
           <%end%>
           <div class="col-md-12 pull-left">
              <div class="description row"><%= comment.description%></div>
-             <div class="row time"><%=comment.created_at.strftime("%B %d, %Y, %I:%M %p ") %></div>
+             <div class="time">
+                <%= timeago_tag post.created_at, :nojs => true, :limit => 30.days.ago %>
+             </div>
           </div>
         </div>
         <hr>
