--- a/app/views/meetup_posts/_meetup_post_update.html.erb
+++ b/app/views/meetup_posts/_meetup_post_update.html.erb
@@ -5,7 +5,9 @@
         </div>
         <div class="col-md-8 col-sm-12 col-xs-12">
           <div class="user-name"><%= link_to "#{post.user.full_name}", user_path(post.user) %></div>
-          <div class="time"><%=post.created_at.strftime("%B %d, %Y, %I:%M %p") %></div>
+          <div class="time">
+            <%= timeago_tag post.created_at, :nojs => true, :limit => 30.days.ago %>
+          </div>
         </div>
         <%if post.user == current_user %>
           <div class="col-md-2 col-sm-4 col-xs-6 pull-right post-actions" >
@@ -19,7 +21,33 @@
         <p><%= post.description %></p>
       </div>
       <!-- Comments start here-->
-
+      <div class="post-comments">
+        <ul class="list-inline row">
+          <li class="col-md-3 col-sm-3 col-xs-6"><a class="add-comment" id="add-comment-<%= post.id %>" data-comment="<%= post.id %>"><i class="glyphicon glyphicon-plus-sign"></i> Comment </a></li>
+          <li class="col-md-3 col-sm-3 col-xs-6" class="glyphicon glyphicon-comment">
+          <a class="count-comments" id="count-comments-<%= post.id %>" data-comment="<%= post.id %>"><%= post.comments.count %> comments</a> </li>
+            <% if current_user && MeetupPostVote.where(user_id: current_user, meetup_post_id: post).present? %>
+              <span id="upvote-btn-<%=post.id%>">
+                <%=link_to(meetup_meetup_post_meetup_post_vote_path(meetup,post.id, MeetupPostVote.where(user_id: current_user, meetup_post_id: post).first),remote: true, method: :delete) do %>
+                  <i class="glyphicon glyphicon-thumbs-up"></i>
+                <%end%>
+              </span>
+            <%else%>
+              <span id="upvote-btn-<%=post.id%>">
+                <%=link_to(meetup_meetup_post_meetup_post_votes_path(meetup,post.id, MeetupPostVote.new),remote: true, method: :post) do %>
+                  <i class="glyphicon glyphicon-thumbs-up"></i>
+                <%end%>
+              </span>
+            <%end%>
+          <span class="count-upvotes" id="count-upvotes-<%= post.id %>" data-comment="<%= post.id %>"><%= post.meetup_post_votes.count %> upvotes</span>
+        </ul>
+        <div class="new-comment" id="new-comment-form-<%= post.id %>" style="display:none;">
+          <%= render partial: 'meetup_posts/new_comment_form', locals: {meetup_post: post, meetup: meetup}%>
+        </div>
+        <div class="all-comments" id="all-comments-<%=post.id %>" style="display:none;">
+        <%= render partial: 'meetup_posts/comments', locals: { user: current_user, post: post}%>
+        </div>
+      </div>
       <!-- End of comments-->
       <hr>
     </div><!-- Post body ends here-->
