--- a/app/views/user_posts/_post.html.erb
+++ b/app/views/user_posts/_post.html.erb
@@ -7,7 +7,9 @@
         </div>
         <div class="col-md-8 col-sm-12 col-xs-12">
           <div class="user-name"><%= link_to "#{post.user.full_name}", user_path(post.user) %></div>
-          <div class="time"><%=post.created_at.strftime("%B %d, %Y, %I:%M %p") %></div>
+          <div class="time">
+            <%= timeago_tag post.created_at, :nojs => true, :limit => 30.days.ago %>
+          </div>
         </div>
         <%if post.user == current_user %>
           <div class="col-md-2 col-sm-4 col-xs-6 pull-right post-actions" >
