--- a/app/views/user_posts/_post_update.html.erb
+++ b/app/views/user_posts/_post_update.html.erb
@@ -4,7 +4,9 @@
     </div>
     <div class="col-md-8 col-sm-12 col-xs-12">
       <div class="user-name"><%= link_to "#{post.user.full_name}", user_path(post.user) %></div>
-      <div class="time">posted on <%=post.created_at.strftime("%B %d, %Y, %I:%M %p") %></div>
+      <div class="time">
+        <%= timeago_tag post.created_at, :nojs => true, :limit => 30.days.ago %>
+      </div>
     </div>
     <div class="col-md-2 pull-right post-actions" >
       <%=link_to "", edit_user_post_path(post.id),remote: true,  class: "fa fa-pencil fa-fw" %>
