--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -1,22 +1,19 @@
 
 .user-info-section {
-  min-height:400px;
+  min-height:300px;
   margin-top:50px;
 }
 
 .user-stat-1 {
   background-color: #fff;
-  min-height:400px;
+  min-height:300px;
 
   .item {
     text-align:center;
-    height:200px;
+    height:150px;
     border:none;
-    padding-top:60px;
+    padding-top:40px;
 
-    &:hover {
-      //background-color:green;
-    }
   }
 
   #following {
@@ -38,11 +35,11 @@
   }
 
   .special-item {
-    padding-top:60px;
+    padding-top:40px;
     text-align:center;
     background-color:#777777;
-    min-height:200px;
-    padding-left:15px;
+    min-height:150px;
+    padding-left:0px;
     color:#2dbe60;
 
     .numbers {
@@ -55,23 +52,23 @@
     text-transform: uppercase;
     color:#fff;
     font-size: 16pt;
-    padding-top:15px;
+    padding-top:4px;
   }
 }
 
 .user-info {
   .main-profile {
-    min-height:400px;
-    background-image: url("dusty-sky.JPG");
+    min-height:300px;
+    //background-image: url("dusty-sky.JPG");
     /* Image is centered vertically and horizontally at all times */
     background-position: center center;
     background-repeat: no-repeat;
     /* Makes the image fixed in the viewport so that it doesn't move when
        the content height is greater than the image height */
     background-size:cover;
-    background-color:#464646;
-    padding-top:40px;
-
+    //background-color:#464646;
+    background: #ddd;
+    padding-top:20px;
 
     p {
       color:#fff;
@@ -91,7 +88,7 @@
   }
 
   .user-stats {
-    height:100%;
+    height:300px;
   }
 
   .user-stats:hover {
@@ -273,25 +270,40 @@ aside h3 {
 .user-profile-info {
   background-color:#fff;
   border:1px solid #dddddd;
+  border-radius: 3px;
   padding:10px;
-  margin:5px;
+  margin-top:5px;
   .tabpanel {margin-top:5px;}
-
+  hr {
+    margin-left: 0px;
+  }
   .form-control {
     max-width:100%;
   }
-
   .info-wrapper {
     border:1px solid #dddddd;
   }
-
   .current-course {
-    //border:1px solid #dddfff;
     padding:10px;
   }
-
   .item-heading {
     border:1px solid black;
+  }
+
+  .item {
+    min-height: 80px;
+    .add-course {
+      display: none;
+    }
+
+    &:hover {
+      background-color:#EFEFDE;
+
+
+      .add-course {
+        display: inline;
+      }
+    }
   }
 }
 
@@ -300,11 +312,9 @@ aside h3 {
 }
 
 .course-item {
-
   .remove-item {
     display: none;
   }
-
   &:hover {
     .remove-item{ display:inline;}
   }
