--- a/app/views/taken_courses/_view.html.erb
+++ b/app/views/taken_courses/_view.html.erb
@@ -3,7 +3,7 @@
     <div class="">
       <div class="row">
         <div class="col-md-6 col-sm-9 col-xs-12">
-          <h>Taken courses</h3>
+          <h3>Taken courses</h3>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12 pull-right">
           <%if @user == current_user %>
