--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -34,7 +34,13 @@
 
   <div class="col-md-4 side-bar text-center">
       <div class="side-bar-content">
-        <p>Meet other users</p>
+        <div class="popular-meetup-posts">
+          <p>Most popular posts</p>
+        </div>
+        <div class="related-meetups">
+          <p>related Meetups</p>
+          <%= @meetup.name%>
+        </div>
       </div>
     </div>
    </div>
