--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <div class="user-profile-wrapper">
-  <div class="container">
+<div class="container-fluid user-cover">
+</div>
+<div class="container">
     <div class="">
       <% @user ||= current_user %>
       <span ng-init="currentUser = <%= @user.id %>"></span>
