improve meetups index page design

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -6,10 +6,10 @@
   margin-top:10px;
 }*/
 .user-cover {
-  //background-color:#3B736C;
-  //background:rgba(59, 115, 108, 0.54);
+  background-color:#3B736C;
+  background:rgba(59, 115, 108, 0.54);
   min-height: 300px;
-  background-image: url("dusty-sky.JPG");
+  //background-image: url("dusty-sky.JPG");
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -21,7 +21,7 @@
     background: #E2EAE9;
     //background-color: #FFFFFF;
     padding-top:50px;
-    border-radius:5px;
+    border-radius:3px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 
