--- a/app/assets/stylesheets/meetups.css.scss
+++ b/app/assets/stylesheets/meetups.css.scss
@@ -12,25 +12,25 @@
 
 .all-study-meetups {
   .meetup-card {
-    border-radius: 7px;
-    min-width: 230px;
-    margin: 6px ;
-    min-height: 200px;
+    border-radius: 3px;
+    margin: 4px ;
   }
 
 }
 
 .study-meetups-section {
-  background: #dddddd;
+  background: #fff;
   padding-left:15px;
 }
 
 .meetup-card {
-  min-height: 300px;
+  min-height: 200px;
+  min-width: 298px;
   .card-top {
     width:100%;
-    background:#efefef;
+    background:#05767E;
     background-position: cover;
+    color:#E5E4D7;
     min-height:170px;
     margin-right: 0px;
     h4 { padding: 15px 15px; }
@@ -39,7 +39,7 @@
   .card-bottom {
     width:100%;
     height: 100px;
-    background-color: #fff;
+    background-color: #E5E4D7;
     background-position: cover;
     padding-bottom:5px;
 
