--- a/app/views/current_courses/_view.html.erb
+++ b/app/views/current_courses/_view.html.erb
@@ -19,7 +19,7 @@
           <li id="course-id-<%=course.id%>" class="current course-item" data-course-id="<%= course.id %>"><%= course.name %> at
             <span><%= course.organization %></span>
             <span class="actions" id="course-actions-<%= course.id %>">
-              <%if current_user == course.user %>
+              <%if current_user && current_user == course.user %>
                 <%=link_to([@user, course], remote: true, method: :delete, data: { comfirm: "are you sure you want to delete this course"}, class: "") do %>
                   <span title="remove course"class="fa fa-times remove-item tex-center"></span>
                 <%end%>
@@ -29,7 +29,7 @@
         <%end%>
       </ul>
       <div class="col-md-4">
-        <div id="new-current-course-form-<%= current_user.id %>" style="display:none;">
+        <div id="new-current-course-form-<%= @user.id %>" style="display:none;">
           <%= bootstrap_form_for([@user, CurrentCourse.new], remote: true) do |f| %>
           <%= f.text_field :name, required: true %>
           <%= f.text_field :organization, required: true%>
