--- a/app/views/educations/_view.html.erb
+++ b/app/views/educations/_view.html.erb
@@ -28,6 +28,7 @@
         <%end%>
       </ul>
       <div class="col-md-4">
+      <%if current_user%>
         <div class="new-education-form" id="education-form-<%=@user.id %>" style="display:none;" data-user-id="<%= @user.id %>">
           <%= bootstrap_form_for([current_user, Education.new], remote: true) do |f| %>
           <%= f.text_field :degree, label: "program/degree/certificate" %>
@@ -38,6 +39,7 @@
           <span><a href="" class="btn btn-primary" id="hide-education-form">Cancel</a> </span>
           <% end %>
         </div>
+      <%end%>
       </div>
     </div>
   </div>
