--- a/app/views/future_courses/_view.html.erb
+++ b/app/views/future_courses/_view.html.erb
@@ -18,7 +18,7 @@
           <li id="future-course-id-<%=course.id%>" class="current course-item" data-course-id="<%= course.id %>"><%= course.name %> at
             <span><%= course.organization %></span>
             <span class="actions" id="future-course-actions-<%= course.id %>">
-              <%if current_user == course.user %>
+              <%if current_user && current_user == course.user %>
                 <%=link_to([current_user, course], remote: true, method: :delete, data: { comfirm: "are you sure you want to delete this course"}) do %>
                   <span title="remove course"class="fa fa-times remove-item tex-center"></span>
                 <%end%>
@@ -28,15 +28,16 @@
         <%end%>
       </ul>
       <div class="col-md-4">
-        <div class="new-future-course-form" id="future-course-form-<%=@user.id %>" style="display:none;" data-user-id="<%= @user.id %>">
-          <%= bootstrap_form_for([current_user, FutureCourse.new], remote: true) do |f| %>
-          <%= f.text_field :name, required: true %>
-          <%= f.text_field :organization, required: true%>
-          <%= f.submit "Save" %>
-          <span><a href="" class="btn btn-primary" id="hide-future-course-form">Cancel</a> </span>
-          <% end %>
-
-        </div>
+        <%if current_user %>
+          <div class="new-future-course-form" id="future-course-form-<%=@user.id %>" style="display:none;" data-user-id="<%= @user.id %>">
+            <%= bootstrap_form_for([current_user, FutureCourse.new], remote: true) do |f| %>
+            <%= f.text_field :name, required: true %>
+            <%= f.text_field :organization, required: true%>
+            <%= f.submit "Save" %>
+            <span><a href="" class="btn btn-primary" id="hide-future-course-form">Cancel</a> </span>
+            <% end %>
+          </div>
+        <%end%>
       </div>
     </div>
   </div>
