--- a/app/views/meetup_members/_create_form.html.erb
+++ b/app/views/meetup_members/_create_form.html.erb
@@ -1,3 +1,3 @@
 <%= link_to(meetup_meetup_members_path(meetup.id, MeetupMember.new),remote: true,  method: :post) do %>
-  <p href="" class="btn btn-default">join</p>
+  <a href="" class="btn btn-default">join</a>
 <%end%>
