--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,9 +16,12 @@
               <p>Boston, MA</p>
             </div>
             <div class="profile-actions">
-              <a href="" class="btn btn-primary">Follow</a>
-              <span><a href="" class="btn btn-primary">Give Credit</a></span>
-
+              <% if current_user != @user %>
+                <ul class="text-center"><li id="<%= @user.id %>-follow-form" class="follow-form" >
+                  <%= render partial: 'follows/follow_form', locals: { user: @user} %>
+                </li></ul>
+              <%end%>
+              <!-- <span><a href="" class="btn btn-primary">Give Credit</a></span> -->
             </div>
           </div>
           <!-- Render aside user stats-->
